Use different response objects
