# src/main/java/pfko/vopalensky/spring/api/OfferApiController.java
@@ -1,6 +1,5 @@
 package pfko.vopalensky.spring.api;
 
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,6 +8,8 @@ import pfko.vopalensky.spring.model.Offer;
 import pfko.vopalensky.spring.model.Service;
 import pfko.vopalensky.spring.model.User;
 import pfko.vopalensky.spring.repository.OfferRepository;
+import pfko.vopalensky.spring.response.OfferResponse;
+import pfko.vopalensky.spring.service.Helper;
 
 import java.util.List;
 
@@ -16,13 +17,11 @@ import java.util.List;
 public class OfferApiController {
 
     private final OfferRepository offerRepository;
-    private final HttpServletRequest request;
 
 
     @Autowired
-    public OfferApiController(OfferRepository offerRepository, HttpServletRequest request) {
+    public OfferApiController(OfferRepository offerRepository) {
         this.offerRepository = offerRepository;
-        this.request = request;
     }
 
 
@@ -31,9 +30,9 @@ public class OfferApiController {
      *
      * @return List of all offers
      */
-    @GetMapping(value = "/offer")
-    public ResponseEntity<List<Offer>> getOffers() {
-        List<Offer> offers = offerRepository.findAll();
+    @GetMapping(value = "/offer", produces = "application/json")
+    public ResponseEntity<List<OfferResponse>> getOffers() {
+        List<OfferResponse> offers = offerRepository.getResponses();
         return new ResponseEntity<>(offers, HttpStatus.OK);
     }
 
@@ -43,9 +42,14 @@ public class OfferApiController {
      * @param offer New offer
      * @return Newly created offer
      */
-    @PostMapping(value = "/offer")
-    public ResponseEntity<Offer> addOffer(Offer offer) {
-        return Helper.objectCreator(offer, request, offerRepository);
+    @PostMapping(value = "/offer", consumes = "application/json", produces = "application/json")
+    public ResponseEntity<OfferResponse> addOffer(@RequestBody Offer offer) {
+        try {
+            offerRepository.store(offer);
+            return new ResponseEntity<>(new OfferResponse(offer), HttpStatus.OK);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
+        }
     }
 
 
@@ -55,25 +59,21 @@ public class OfferApiController {
      * @param offer Updated existing offer on board
      * @return Newly updated offer
      */
-    @PutMapping(value = "/offer")
-    public ResponseEntity<Offer> updateOffer(Offer offer) {
-        String accept = request.getHeader(Helper.ACCEPT_HEADER);
-        if (accept != null && accept.contains(Helper.ACCEPT_TYPE)) {
-            try {
-                Offer toChange = offerRepository.get(offer.getId());
-                if (toChange == null) {
-                    return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-                }
-                toChange.setName(offer.getName());
-                toChange.setCost(offer.getCost());
-                toChange.setServices(offer.getServices());
-                toChange.setCreatedBy(offer.getCreatedBy());
-                return new ResponseEntity<>(toChange, HttpStatus.OK);
-            } catch (Exception e) {
-                return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
+    @PutMapping(value = "/offer", consumes = "application/json", produces = "application/json")
+    public ResponseEntity<OfferResponse> updateOffer(@RequestBody Offer offer) {
+        try {
+            Offer toChange = offerRepository.get(offer.getId());
+            if (toChange == null) {
+                return new ResponseEntity<>(HttpStatus.NOT_FOUND);
             }
+            toChange.setName(offer.getName());
+            toChange.setCost(offer.getCost());
+            toChange.setServices(offer.getServices());
+            toChange.setCreatedBy(offer.getCreatedBy());
+            return new ResponseEntity<>(new OfferResponse(toChange), HttpStatus.OK);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.UNPROCESSABLE_ENTITY);
         }
-        return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
     }
 
     /**
@@ -82,7 +82,7 @@ public class OfferApiController {
      * @param offerId Offer of id to delete
      */
     @DeleteMapping(value = "/offer/{offerId}")
-    public ResponseEntity<Void> deleteOffer(Long offerId) {
+    public ResponseEntity<Void> deleteOffer(@PathVariable(name = "offerId") Long offerId) {
         offerRepository.delete(offerId);
         return new ResponseEntity<>(HttpStatus.OK);
     }
@@ -93,22 +93,18 @@ public class OfferApiController {
      * @param offerId ID of an offer to return
      * @return Found offer
      */
-    @GetMapping(value = "/offer/{offerId}")
-    public ResponseEntity<Offer> getOfferById(Long offerId) {
-        String accept = request.getHeader(Helper.ACCEPT_HEADER);
-        if (accept != null && accept.contains(Helper.ACCEPT_TYPE)) {
-            try {
-                Offer found = offerRepository.get(offerId);
-                if (found != null) {
-                    return new ResponseEntity<>(found, HttpStatus.OK);
-                } else {
-                    return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-                }
-            } catch (Exception e) {
-                return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+    @GetMapping(value = "/offer/{offerId}", produces = "application/json")
+    public ResponseEntity<OfferResponse> getOfferById(@PathVariable(name = "offerId") Long offerId) {
+        try {
+            Offer found = offerRepository.get(offerId);
+            if (found != null) {
+                return new ResponseEntity<>(new OfferResponse(found), HttpStatus.OK);
+            } else {
+                return new ResponseEntity<>(HttpStatus.NOT_FOUND);
             }
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
-        return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
     }
 
     /**
@@ -120,33 +116,33 @@ public class OfferApiController {
      * @param services Services in an offer that needs to be updated
      * @param created  ID of worker/team that created this offer
      */
-    @PostMapping(value = "/offer/{offerId}")
-    public ResponseEntity<Offer> updateOfferWithForm(Long offerId, String name, Long cost, List<Service> services, User created) {
-        String accept = request.getHeader(Helper.ACCEPT_HEADER);
-        if (accept != null && accept.contains(Helper.ACCEPT_TYPE)) {
-            try {
-                Offer toChange = offerRepository.get(offerId);
-                if (toChange == null) {
-                    return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-                }
-                if (name != null) {
-                    toChange.setName(name);
-                }
-                if (cost != null) {
-                    toChange.setCost(cost);
-                }
-                if (services != null) {
-                    toChange.setServices(services);
-                }
-                if (created != null) {
-                    toChange.setCreatedBy(created);
-                }
-                return new ResponseEntity<>(toChange, HttpStatus.OK);
-            } catch (Exception e) {
-                return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+    @PostMapping(value = "/offer/{offerId}", produces = "application/json")
+    public ResponseEntity<OfferResponse> updateOfferWithForm(
+            @PathVariable(name = "offerId") Long offerId,
+            @RequestParam(value = "name", required = false) String name,
+            @RequestParam(value = "cost", required = false) Long cost,
+            @RequestParam(value = "services", required = false) List<Service> services,
+            @RequestParam(value = "created", required = false) User created) {
+        try {
+            Offer toChange = offerRepository.get(offerId);
+            if (toChange == null) {
+                return new ResponseEntity<>(HttpStatus.NOT_FOUND);
             }
+            if (name != null) {
+                toChange.setName(name);
+            }
+            if (cost != null) {
+                toChange.setCost(cost);
+            }
+            if (services != null) {
+                toChange.setServices(services);
+            }
+            if (created != null) {
+                toChange.setCreatedBy(created);
+            }
+            return new ResponseEntity<>(new OfferResponse(toChange), HttpStatus.OK);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
-
-        return null;
     }
 }
